Give Headers IDs + Add Jump to Errata Section

--- a/src/app/blog/(posts)/0003/page.mdx
+++ b/src/app/blog/(posts)/0003/page.mdx
@@ -11,6 +11,8 @@ import Image from 'next/image';
 # Talking Cows, Perls, and Terminals
 _A really obscure set of rabbit holes to recreate an old piece of software_
 
+[***Jump to the Errata***](#errata)
+
 I've been working on a project called [shell-toy](https://github.com/FaceFTW/shell-toy) that intends to replace the `fortune | cowsay` calls my shell init scripts make. Aside from performance improvements, I also added work to inline the actual "cows" and "fortunes" in the executables to make them easily transferrable across machines. Those features are not the main focus of this post, and the code is fully open source for anyone to take a peek.
 
 The main focus is about reading the Perl files and rendering them properly in terminals.
