--- a/src/blog/0001.md
+++ b/src/blog/0001.md
@@ -1,12 +1,10 @@
 ---
-title: "Welcome to the Blog"
+postTitle: "Welcome to the Blog"
 excerpt: "hi guys consider subscribing to my yt channel pls thx"
 date: "2024-09-01"
 author: Alex Westerman
 slug: '0001'
 ---
-
-# Welcome to the Blog
 
 Welcome to the first "blog" post I've created. It's not the usual kind of blog that has an RSS feed (yet) and has no direct focus but I plan on *occasionally* venting thoughts or breakdown technical details of things I think are cool. While this could totally devolve into ramblings about __why [Rust](https://rust-lang.org) is a great language__ or other insane things like __Windows being a pretty ok developer platform__, it's too early to make a judgment on where this will go.
 
